<resources>
    <string name="app_name">Driftwood Soccer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_game_button_title">New Game</string>
    <string name="game_list_button_title">Game List</string>
    <string name="date_title">Date:</string>
    <string name="time_title">Time:</string>
    <string name="player_list_title">Players:</string>
    <string name="add_player_button_title">Add Player</string>
    <string name="create_game_button_title">Create Game</string>
    <string name="delete_game_button_title">Delete</string>
    <string name="new_game_activity_label">Create Game</string>
    <string name="player_activity_label">Player</string>
    <string name="games_activity_label">Games</string>
    <string name="game_details_activity_label">Game</string>
    <string name="group_management_button_title">Manage Group</string>
    <string name="search_player_dialog_message">Search players by username.</string>
    <string name="search_title">Search</string>
    <string name="search_cancel_button_title">Cancel</string>
    <string name="username_search_hint">username</string>
    <string name="search_hint">Username</string>
    <string name="group_management_activity_label">Group Management</string>
    <string name="app_global_preferences">DriftwoodGlobalPreferences</string>
</resources>
